fix(index.html): modules were not imported correctly

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tinydoc</title>
-  <link href="/.modules/bootstrap/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-  <link href="/.modules/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" crossorigin="anonymous">
-  <link href="/.modules/highlight.js/styles/atom-one-dark.css" rel="stylesheet" crossorigin="anonymous">
+  <link href=".modules/bootstrap/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+  <link href=".modules/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" crossorigin="anonymous">
+  <link href=".modules/highlight.js/styles/atom-one-dark.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 
 <body data-bs-theme="dark">
@@ -94,9 +94,9 @@
   </footer>
 </div>
 
-  <script src="/.modules/bootstrap/js/bootstrap.bundle.js" crossorigin="anonymous"></script>
-  <script src="/.modules/marked/marked.min.js" crossorigin="anonymous"></script>
-  <script src="/.modules/highlight.js/highlight.min.js" crossorigin="anonymous"></script>
+  <script src=".modules/bootstrap/js/bootstrap.bundle.js" crossorigin="anonymous"></script>
+  <script src=".modules/marked/marked.min.js" crossorigin="anonymous"></script>
+  <script src=".modules/highlight.js/highlight.min.js" crossorigin="anonymous"></script>
   <script>
     var u = new URL(window.location.href);
     var d = u.searchParams.get('page');
