fix(index.html): fix paths on non-custom-url pages

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <header class="p-3 mb-3 border-bottom fixed-top bg-dark-subtle d-lg-inline d-none">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 me-2 mb-lg-0 link-body-emphasis text-decoration-none">
+        <a href="./" class="d-flex align-items-center mb-2 me-2 mb-lg-0 link-body-emphasis text-decoration-none">
           <i class="bi bi-clipboard-heart-fill" style="font-size:30px"></i>
         </a>
-        <a href="/" class="d-flex align-items-center mb-2 mt-1 me-2 mb-lg-0 link-body-emphasis text-decoration-none">
+        <a href="./" class="d-flex align-items-center mb-2 mt-1 me-2 mb-lg-0 link-body-emphasis text-decoration-none">
           <h3 class="fw-bolder" style="font-size:25px">Tinydoc</h3>
         </a>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/" class="nav-link px-2 link-body-emphasis">Documentation</a></li>
+          <li><a href="./" class="nav-link px-2 link-body-emphasis">Documentation</a></li>
         </ul>
         <a href="https://github.com/prplwtf/tinydoc"><button type="button" class="btn btn-primary">GitHub</button></a>
       </div>
@@ -32,7 +32,7 @@
   <div class="p-2 d-lg-none d-inline"></div>
   <nav class="navbar bg-dark-subtle fixed-top d-lg-none d-inline">
     <div class="container-fluid">
-      <a href="/" class="d-flex align-items-center mb-2 me-2 mt-2 mb-lg-0 link-body-emphasis text-decoration-none"><img src="/.assets/tinydoc-black.png" width="40" height="40" class="rounded-3" alt="" /></a>
+      <a href="./" class="d-flex align-items-center mb-2 me-2 mt-2 mb-lg-0 link-body-emphasis text-decoration-none"><img src="/.assets/tinydoc-black.png" width="40" height="40" class="rounded-3" alt="" /></a>
       <div class="dropdown">
         <button class="btn btn-secondary bg-dark-subtle border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="navbar-toggler-icon"></span>
@@ -82,7 +82,7 @@
   <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+      <a href="./" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
         <i class="bi bi-clipboard-heart text-body-secondary" style="font-size:25px"></i>
       </a>
       <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Tinydoc</span>
