fix(index.html): mobile navbar icon was incorrect

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="p-2 d-lg-none d-inline"></div>
   <nav class="navbar bg-dark-subtle fixed-top d-lg-none d-inline">
     <div class="container-fluid">
-      <a href="./" class="d-flex align-items-center mb-2 me-2 mt-2 mb-lg-0 link-body-emphasis text-decoration-none"><img src="/.assets/tinydoc-black.png" width="40" height="40" class="rounded-3" alt="" /></a>
+      <a href="./" class="d-flex align-items-center mb-2 me-2 mt-2 mb-lg-0 link-body-emphasis text-decoration-none"><i class="bi bi-clipboard-heart-fill" style="font-size:30px"></i></a>
       <div class="dropdown">
         <button class="btn btn-secondary bg-dark-subtle border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           <span class="navbar-toggler-icon"></span>
