feat(rename-repo): update links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tinydoc</title>
+  <title>Tinydocs</title>
   <link href=".modules/bootstrap/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link href=".modules/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" crossorigin="anonymous">
   <link href=".modules/highlight.js/styles/atom-one-dark.css" rel="stylesheet" crossorigin="anonymous">
@@ -18,12 +18,12 @@
           <i class="bi bi-clipboard-heart-fill" style="font-size:30px"></i>
         </a>
         <a href="./" class="d-flex align-items-center mb-2 mt-1 me-2 mb-lg-0 link-body-emphasis text-decoration-none">
-          <h3 class="fw-bolder" style="font-size:25px">Tinydoc</h3>
+          <h3 class="fw-bolder" style="font-size:25px">Tinydocs</h3>
         </a>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="./" class="nav-link px-2 link-body-emphasis">Documentation</a></li>
         </ul>
-        <a href="https://github.com/prplwtf/tinydoc"><button type="button" class="btn btn-primary">GitHub</button></a>
+        <a href="https://github.com/prplwtf/tinydocs"><button type="button" class="btn btn-primary">GitHub</button></a>
       </div>
     </div>
   </header>
@@ -40,7 +40,7 @@
         <ul class="dropdown-menu dropdown-menu-end gap-1 p-2 rounded-3 mx-0 border-0 shadow w-220px">
           <li><a class="dropdown-item rounded-2 disabled" href="/">Documentation</a></li>
           <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item rounded-2" href="https://github.com/prplwtf/tinydoc">GitHub</a></li>
+          <li><a class="dropdown-item rounded-2" href="https://github.com/prplwtf/tinydocs">GitHub</a></li>
         </ul>
       </div>
     </div>
@@ -85,11 +85,11 @@
       <a href="./" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
         <i class="bi bi-clipboard-heart text-body-secondary" style="font-size:25px"></i>
       </a>
-      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Tinydoc</span>
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2023 Tinydocs</span>
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-body-secondary" href="https://github.com/prplwtf/tinydoc"><i class="bi bi-github" width="24" height="24"></i></a></li>
+      <li class="ms-3"><a class="text-body-secondary" href="https://github.com/prplwtf/tinydocs"><i class="bi bi-github" width="24" height="24"></i></a></li>
     </ul>
   </footer>
 </div>
